--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "lint:staged": "lint-staged"
   },
   "author": "Vahidd",
-  "private": true,
   "license": "ISC",
   "dependencies": {
     "antd": "^3.7.0",
@@ -31,6 +30,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "connect-history-api-fallback": "^1.5.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
