--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jibit-react-app",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "app/index.js",
   "scripts": {
@@ -69,7 +69,8 @@
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.3",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "react": "^16.0.0",
